[gd_scene load_steps=5 format=3 uid="uid://kjlf5k1kqet4"]

[ext_resource type="Script" path="res://Scripts/environmentalObject.gd" id="1_j87ms"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2lhut"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plhd5"]
albedo_color = Color(0.403922, 0.0352941, 0.439216, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ltkxe"]
material = SubResource("StandardMaterial3D_plhd5")

[node name="Environmental" type="Area3D"]
script = ExtResource("1_j87ms")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
shape = SubResource("SphereShape3D_2lhut")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
mesh = SubResource("SphereMesh_ltkxe")

[node name="EnvironmentalEvent" type="AkEvent3D" parent="."]
event = {
"id": 162560690,
"name": "Tree_Swish"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Narrate_Environmental" type="AkEvent3D" parent="."]
event = {
"id": 3477674050,
"name": "Narrate_Apple_Tree"
}
stop_on = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[connection signal="end_of_event" from="Narrate_Environmental" to="." method="_on_narrate_environmental_end_of_event"]
